@@ -23,7 +23,7 @@
  */
 
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.ResourceScope;
+import java.lang.foreign.MemorySession;
 import java.lang.foreign.SegmentAllocator;
 import org.testng.annotations.*;
 import static org.testng.Assert.*;
@@ -39,8 +39,8 @@ public class TestStringEncoding {
 
     @Test(dataProvider = "strings")
     public void testStrings(String testString, int expectedByteLength) {
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            SegmentAllocator allocator = SegmentAllocator.newNativeArena(expectedByteLength, scope);
+        try (MemorySession session = MemorySession.openConfined()) {
+            SegmentAllocator allocator = SegmentAllocator.newNativeArena(expectedByteLength, session);
             MemorySegment text = allocator.allocateUtf8String(testString);
 
             assertEquals(text.byteSize(), expectedByteLength);
